--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+docker==4.4.1
 Flask==1.1.2
 idna==2.10
 install==1.3.4
@@ -9,10 +10,13 @@ Jinja2==2.11.2
 joblib==1.0.0
 MarkupSafe==1.1.1
 numpy==1.19.5
+pywin32==227
 requests==2.25.1
 scikit-learn==0.24.0
 scipy==1.6.0
+six==1.15.0
 sklearn==0.0
 threadpoolctl==2.1.0
 urllib3==1.26.2
+websocket-client==0.57.0
 Werkzeug==1.0.1
